[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/gui/start_focus.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/start_normal.png" type="Texture" id=2]
[ext_resource path="res://src/scripts/alleyway/AlleywayGame.gd" type="Script" id=3]
[ext_resource path="res://assets/gui/exit_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/gui/exit_focus.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 5 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/pixel.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/pixel.ttf"

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = SubResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.348, 200 )

[node name="AlleywayGame" type="Node2D"]
script = ExtResource( 3 )

[node name="WallLeft" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="WallCollisionShape" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( -5, 193.663 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="WallRight" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="WallCollisionShape" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 355, 187.313 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="WallTop" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="WallCollisionShape2" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 177.746, -5 )
shape = SubResource( 1 )

[node name="HUD" type="Control" parent="."]
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -68.5
margin_right = 37.0
margin_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 74, 0.005 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.145098 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="HUD"]
margin_top = 141.0
margin_right = 258.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 4 )
text = "Game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Label" parent="HUD"]
margin_right = 10.0
margin_bottom = 14.0
rect_min_size = Vector2( 10, 0 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
margin_right = 400.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/MarginContainer"]
margin_right = 400.0
margin_bottom = 100.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = 54.0
margin_right = 129.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 6 )
text = "Alleyway"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -34.0
margin_right = 80.0
margin_bottom = 34.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Menu/MarginContainer/ColorRect/VBoxContainer" groups=[
"Buttons",
]]
margin_right = 160.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )

[node name="ExitButton" type="TextureButton" parent="Menu/MarginContainer/ColorRect/VBoxContainer" groups=[
"Buttons",
]]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 6 )

[node name="EndArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea"]
position = Vector2( 173.617, 350 )
rotation = 1.5708
shape = SubResource( 7 )
[connection signal="body_entered" from="EndArea" to="." method="_on_endArea_body_entered"]
